--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasagna | Odin Recipes</title>
+    <title>Spinach and Ricotta Lasagna | Odin Recipes</title>
 </head>
 <body>
     <a href="../index.html">Home</a>
-    <h1>Lasagna</h1>
+    <h1>Spinach and Ricotta Lasagna</h1>
 
 </body>
 </html>
