Add width and height to image

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,7 +9,9 @@
     <a href="../index.html">Home</a>
     
     <h1>Spinach and Ricotta Lasagna</h1>
-    <img src="../images/spinach_and_ricotta.jpg" alt="Spinach and ricotta lasagna">
+    <img src="../images/spinach_and_ricotta.jpg" 
+        alt="Spinach and ricotta lasagna"
+        width="800" height="450">
         
     <h2>Description</h2>
     <p>A quick and easy lasagna with plenty of greens.</p>
