Add recipe: tomato soup

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Spinach and Ricotta Lasagna</a>
+    <a href="recipes/tomato-soup.html">Fresh Tomato Soup</a>
 </body>
 </html>
