Add recipe: spinach ricotta pasta

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Spinach and Ricotta Lasagna</a>
     <a href="recipes/tomato-soup.html">Fresh Tomato Soup</a>
+    <a href="recipes/spinach-and-ricotta-pasta.html">Spinach and Ricotta Pasta</a>
 </body>
 </html>
