--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Spinach and Ricotta Lasagna</a>
-    <a href="recipes/tomato-soup.html">Fresh Tomato Soup</a>
-    <a href="recipes/spinach-and-ricotta-pasta.html">Spinach and Ricotta Pasta</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Spinach and Ricotta Lasagna</a></li>
+        <li><a href="recipes/tomato-soup.html">Fresh Tomato Soup</a></li>
+        <li><a href="recipes/spinach-and-ricotta-pasta.html">Spinach and Ricotta Pasta</a></li>
+    </ul>
 </body>
 </html>
