--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spinach and Ricotta Lasagna | Odin Recipes</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <a href="../index.html">Home</a>
@@ -11,11 +12,11 @@
     <h1>Spinach and Ricotta Lasagna</h1>
     <img src="../images/spinach_and_ricotta.jpg" 
         alt="Spinach and ricotta lasagna"
-        width="800" height="450">
+        width="800" height="450" class="recipe-img">
         
     <h2>Description</h2>
-    <p>A quick and easy lasagna with plenty of greens.</p>
-    <p>Taken from BBC Food, recipe by Rosie Reynolds</p>
+    <p class="description">A quick and easy lasagna with plenty of greens.</p>
+    <p class="byline">Taken from BBC Food, recipe by Rosie Reynolds</p>
 
     <h2>Ingredients</h2>
     <h3>For the tomato sauce</h3>
