--- a/recipes/spinach-and-ricotta-pasta.html
+++ b/recipes/spinach-and-ricotta-pasta.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spinach and Ricotta Pasta | Odin Recipes</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <a href="../index.html">Home</a>
@@ -11,12 +12,12 @@
     <h1>Spinach and Ricotta Pasta</h1>
     <img src="../images/spinach_and_ricotta_pasta.jpg" 
         alt="Spinach and ricotta pasta in bowls"
-        width="800" height="450">
+        width="800" height="450" class="recipe-img">
         
     <h2>Description</h2>
-    <p>You can make Anna Del Conte's quick and easy spinach and ricotta pasta 
+    <p class="description">You can make Anna Del Conte's quick and easy spinach and ricotta pasta 
         sauce in less time than it takes to cook the pasta.</p>
-    <p>Taken from BBC Food, recipe by Anna Del Conte</p>
+    <p class="byline">Taken from BBC Food, recipe by Anna Del Conte</p>
 
     <h2>Ingredients</h2>
     <ul>
