--- a/recipes/tomato-soup.html
+++ b/recipes/tomato-soup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fresh Tomato Soup | Odin Recipes</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <a href="../index.html">Home</a>
@@ -11,12 +12,12 @@
     <h1>Fresh Tomato Soup</h1>
     <img src="../images/tomato_soup.jpg" 
         alt="A bowl of tomato soup"
-        width="800" height="450">
+        width="800" height="450" class="recipe-img">
         
     <h2>Description</h2>
-    <p>This fresh and simple tomato soup recipe is perfect for using up a glut 
+    <p class="description">This fresh and simple tomato soup recipe is perfect for using up a glut 
         of homegrown tomatoes.</p>
-    <p>Taken from BBC Food.</p>
+    <p class="byline">Taken from BBC Food.</p>
 
     <h2>Ingredients</h2>
     <ul>
