Update html with divs

--- a/recipes/tomato-soup.html
+++ b/recipes/tomato-soup.html
@@ -13,38 +13,43 @@
     <img src="../images/tomato_soup.jpg" 
         alt="A bowl of tomato soup"
         width="800" height="450" class="recipe-img">
+    <div class="description">
+        <h2>Description</h2>
+        <p class="description">This fresh and simple tomato soup recipe is perfect for using up a glut 
+            of homegrown tomatoes.</p>
+        <p class="byline">Taken from BBC Food.</p>
+    </div>    
+
+    <div class="ingredients">
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 tbsp olive oil</li>
+            <li>2 onions, chopped</li>
+            <li>1 carrot, peeled and diced finely</li>
+            <li>1 garlic clove, crushed</li>
+            <li>1 celery stick, finely chopped</li>
+            <li>450g/1lb fresh ripe tomatoes, halved</li>
+            <li>1 tsp sugar</li>
+            <li>1 litre/1¾ pints vegetable stock</li>
+            <li>handful fresh basil, shredded (optional)</li>
+            <li>salt and freshly ground black pepper</li>
+        </ul>
+    </div>
+
+    <div class="method">
+        <h2>Steps</h2>
+        <ol>
+            <li>Heat the oil in a large saucepan and add the onions, carrot, garlic 
+                and celery. Cover and cook gently for 10 minutes until soft.</li>
+
+            <li>Add the tomatoes and sugar. Season with salt and pepper, stir and 
+                cook for another 5 minutes.</li>
         
-    <h2>Description</h2>
-    <p class="description">This fresh and simple tomato soup recipe is perfect for using up a glut 
-        of homegrown tomatoes.</p>
-    <p class="byline">Taken from BBC Food.</p>
-
-    <h2>Ingredients</h2>
-    <ul>
-        <li>2 tbsp olive oil</li>
-        <li>2 onions, chopped</li>
-        <li>1 carrot, peeled and diced finely</li>
-        <li>1 garlic clove, crushed</li>
-        <li>1 celery stick, finely chopped</li>
-        <li>450g/1lb fresh ripe tomatoes, halved</li>
-        <li>1 tsp sugar</li>
-        <li>1 litre/1¾ pints vegetable stock</li>
-        <li>handful fresh basil, shredded (optional)</li>
-        <li>salt and freshly ground black pepper</li>
-    </ul>
-
-    <h2>Steps</h2>
-    <ol>
-        <li>Heat the oil in a large saucepan and add the onions, carrot, garlic 
-            and celery. Cover and cook gently for 10 minutes until soft.</li>
-
-        <li>Add the tomatoes and sugar. Season with salt and pepper, stir and 
-            cook for another 5 minutes.</li>
-    
-        <li>Add the stock, bring to the boil and simmer for 10 minutes. 
-            Liquidise until smooth. If using the basil, stir in just before 
-            serving. </li>
-    </ol>
+            <li>Add the stock, bring to the boil and simmer for 10 minutes. 
+                Liquidise until smooth. If using the basil, stir in just before 
+                serving. </li>
+        </ol>
+    </div>
 
 </body>
 </html>
